<resources>
    <string name="app_name">UbiBike</string>
    <string name="btn_Submit_txt">Submit</string>
    <string name="usernameTbtext">Username</string>
    <string name="passwordTbtext">Password</string>
    <string name="confirmPasswordTb">Confirm Password</string>
    <string name="btn_Login">Login</string>
    <string name="btn_Register">Register</string>
    <string name="registerTxt"><u>Not a member? Register!</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="port">10001</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_stations">Stations</string>
</resources>
